tests/compile/dup_alias.stderr
error: Alias "my_fn" is already defined
 --> tests/compile/dup_alias.rs:3:65
  |
3 | compose_idents!(my_fn = [foo, _, "baz"], my_fn = [gork, _, bork], {
  |                                                                 ^

error[E0425]: cannot find function `foo_baz` in this scope
  --> tests/compile/dup_alias.rs:10:16
   |
10 |     assert_eq!(foo_baz(), 42);
   |                ^^^^^^^ not found in this scope
